fix: scrollbar and mobile popup fixes

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -15,6 +15,7 @@ html {
   background: var(--black);
   color: var(--white);
   min-height: 100vh;
+  scrollbar-gutter: stable;
 
   &::before {
     content: "";
